maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:31: error: not found: value x
    if (getIndication(x,y)>done){setIndication(x,y,done);done=done+1;(i,j) match {
                      ^ShortestPathMaze:31: error: not found: value y
    if (getIndication(x,y)>done){setIndication(x,y,done);done=done+1;(i,j) match {
                        ^ShortestPathMaze:31: error: not found: value x
    if (getIndication(x,y)>done){setIndication(x,y,done);done=done+1;(i,j) match {
                                               ^ShortestPathMaze:31: error: not found: value y
    if (getIndication(x,y)>done){setIndication(x,y,done);done=done+1;(i,j) match {
                                                 ^ShortestPathMaze:31: error: reassignment to val
    if (getIndication(x,y)>done){setIndication(x,y,done);done=done+1;(i,j) match {
                                                             ^